# llm-tg-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
src/tg_bot_chat/config/: settings.py
src/tg_bot_chat/core/: bot.py
src/tg_bot_chat/handlers/: message_handler.py
src/tg_bot_chat/services/: ai_service.py  context_manager.py
tests/: conftest.py  test_ai_service.py  test_context_manager.py  test_message_handler.py  test_settings.py
